--- a/app/components/Header/Header.module.scss
+++ b/app/components/Header/Header.module.scss
@@ -1,11 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900');
-
 .header {
   display: flex;
-  justify-content: space-between;
-  position: relative;
+  justify-content: center;
   background-color: #1A1522;
-  padding-inline: 20px;
+  padding-inline: 5vw;
+  position: relative;
 }
 
 .header::after {
@@ -18,14 +16,60 @@
   background: linear-gradient(to right, #D93B3B, #5DCAF2);
 }
 
-.header-content {
+.headerContent {
   width: 100%;
-  padding: 10px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.header-content h1 {
+.headerContent h1 {
   font-size: 30px;
+  color: white;
+}
+
+.action {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.login {
+  color: white;
+  font-size: 18px;
+}
+.profile {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.dropdown {
+  position: absolute;
+  top: 50px;
+  right: 0;
+  background-color: #2A2236;
+  border: 1px solid #444;
+  border-radius: 8px;
+  padding: 10px;
+  z-index: 999;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+}
+
+.dropdown ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.dropdown li {
+  padding: 8px 12px;
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.2s ease;
+}
+
+.dropdown li:hover {
+  background-color: #3B2F4C;
 }
