--- a/app/login/login.module.scss
+++ b/app/login/login.module.scss
@@ -1,10 +1,7 @@
 .loginContainer {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 80vh;
-  background-color: #f0f2f5;
-  padding: 20px;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .loginForm {
