--- a/app/login/login.module.scss
+++ b/app/login/login.module.scss
@@ -1,22 +1,32 @@
-.loginContainer {
+.container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
 }
 
-.loginForm {
-  background: rgb(255, 255, 255);
-  padding: 2rem 2.5rem;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-  width: 100%;
-  max-width: 400px;
-  text-align: center;
+.loginContainer {
+  width: 100vw;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-  h1 {
-    margin-bottom: 1.5rem;
-    color: #333;
-    font-size: 1.8rem;
+
+.loginForm {
+  width: 40vw;
+
+  .loginTitle {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+
+    .h1 {
+      color: #FFF3E5;
+    }
   }
 }
 
@@ -27,17 +37,23 @@
   label {
     display: block;
     margin-bottom: 0.5rem;
-    color: #555;
+    color: #FFF3E5;
     font-weight: 500;
   }
 
   input {
     width: 100%;
     padding: 0.75rem 1rem;
-    border: 1px solid #ddd;
+    background-color: #1A1522;
+    border: 1px solid #FFF3E5;
     border-radius: 4px;
     box-sizing: border-box; 
     font-size: 1rem;
+    color: #FFF3E5;
+  }
+
+  .input::placeholder {
+    color: #686868;
   }
 }
 
