--- a/app/components/Select/Select.module.scss
+++ b/app/components/Select/Select.module.scss
@@ -1,19 +1,19 @@
 .select {
-  background-color: #2a2236;
-  border: 1px solid #444;
-  color: #fff3e5;
+  background-color: var(--background-color-secondary);
+  color: var(--text-primary);
   border-radius: 8px;
-  padding: 8px 12px;
+  border: none;
+  padding: 10px 12px;
   outline: none;
   cursor: pointer;
   font-size: 16px;
   transition: border-color 0.2s, color 0.2s;
 
   &:hover {
-    border-color: #5dcaf2;
+    border-color: var(--light-blue);
   }
 
   &:focus {
-    border-color: #5dcaf2;
+    border-color: var(--light-blue);
   }
 }
