--- a/app/(auth)/home/home.module.scss
+++ b/app/(auth)/home/home.module.scss
@@ -12,13 +12,13 @@
   flex-direction: column;
   gap: 1rem;
 
-   .h1{
-     border-bottom: var(--primary-gradient);
-   }
+  .p {
+    color: var(--text-secondary);
+  }
 
   .pokemonSection {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 1rem;
   }
 }
