--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900');
-@import "styles/variables";
+@import './styles/variables.scss';
 
 body {
   margin: 0;
