--- a/app/(auth)/home/components/PokemonCard/pokemonCard.module.scss
+++ b/app/(auth)/home/components/PokemonCard/pokemonCard.module.scss
@@ -2,11 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 
   h1 {
     font-size: 11px;
   }
 }
+
 
 .imageContainer {
   position: relative; // Permite posicionar elementos dentro
@@ -25,8 +27,26 @@
   top: 4px;
   left: 4px;
   color: var(--text-primary);
+  background-color: color-mix(in srgb, var(--background-color-secondary) 60%, transparent);
   font-size: 10px;
   padding: 2px 6px;
   border-radius: 4px;
   font-weight: bold;
+}
+
+.closeButton {
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  background-color: var(--dark-red);
+  color: var(--text-primary);
+  border: none;
+  border-radius: 50%;
+  padding: 4px;
+  cursor: pointer;
+  z-index: 10;
+
+  &:hover {
+    background-color: var(--light-red);
+  }
 }
