--- a/app/(auth)/home/components/PokemonFormModal/pokemonFormModal.module.scss
+++ b/app/(auth)/home/components/PokemonFormModal/pokemonFormModal.module.scss
@@ -15,11 +15,18 @@
   max-width: 500px;
   width: 90%;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
-
-  .h2 {
-    margin-bottom: 16px;
-  }
+  border: 5px solid transparent;
+  background-image:
+          linear-gradient(var(--background-color), var(--background-color)),
+          var(--primary-gradient);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
 }
+
+.modal .h2 {
+  margin-bottom: 16px;
+}
+
 
 .form {
   display: flex;
