create pokemon modal

--- a/app/(auth)/home/components/PokemonFormModal/pokemonFormModal.module.scss
+++ b/app/(auth)/home/components/PokemonFormModal/pokemonFormModal.module.scss
@@ -33,42 +33,20 @@
   flex-direction: column;
   gap: 12px;
 
-  .label {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-  }
-
-  .input,
-  .select {
-    padding: 8px;
-    border: 1px solid var(--medium-blue);
-    border-radius: 8px;
-    background-color: var(--background-color-secondary);
-    color: var(--text-primary);
-  }
-
   .buttons {
     display: flex;
     justify-content: flex-end;
     gap: 12px;
     margin-top: 16px;
 
-    .button {
-      padding: 8px 16px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-    }
-
-    .cancel {
-      background-color: var(--dark-red);
-      color: var(--text-primary);
-    }
-
-    .confirm {
-      background-color: var(--light-blue);
-      color: var(--text-primary);
-    }
   }
+}
+
+.form label {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  color: var(--text-primary);
+  font-size: 14px;
+  font-weight: 500;
 }
