--- a/app/(auth)/home/components/PokemonCard/pokemonCard.module.scss
+++ b/app/(auth)/home/components/PokemonCard/pokemonCard.module.scss
@@ -50,3 +50,20 @@
     background-color: var(--light-red);
   }
 }
+
+.editButton {
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  background-color: var(--light-blue);
+  color: var(--text-primary);
+  border: none;
+  border-radius: 50%;
+  padding: 4px;
+  cursor: pointer;
+  z-index: 10;
+
+  &:hover {
+    background-color: var(--medium-blue);
+  }
+}
