--- a/app/(auth)/home/components/PokemonCard/pokemonCard.module.scss
+++ b/app/(auth)/home/components/PokemonCard/pokemonCard.module.scss
@@ -16,8 +16,8 @@
   background-color: var(--background-color-secondary);
   justify-content: center;
   align-items: center;
-  height: 70px;
-  width: 70px;
+  height: 6vw;
+  width:6vw;
   padding: 1rem;
   border-radius: 8px;
 }
