--- a/app/(auth)/home/components/PokemonSearchResult/pokemonSearchResult.module.scss
+++ b/app/(auth)/home/components/PokemonSearchResult/pokemonSearchResult.module.scss
@@ -9,7 +9,7 @@
     flex-direction: row;
     align-items: center;
     gap: 1rem;
-    justify-content: start;
+    justify-content: center;
     flex-wrap: wrap;
   }
 
