--- a/app/(auth)/collections/[id]/components/PokemonCardDisplay/pokemonCardDisplay.module.scss
+++ b/app/(auth)/collections/[id]/components/PokemonCardDisplay/pokemonCardDisplay.module.scss
@@ -1,9 +1,8 @@
 .cardContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-  border-radius: 10px;
   width: 10vw;
   text-align: center;
   transition: transform 0.3s ease;
@@ -17,11 +16,10 @@
   width: 100%;
   height: auto;
   object-fit: contain;
-  border-radius: 20px;
   padding: 8px;
 }
 
 .cardName {
-  font-size: 16px;
+  font-size: 12px;
   color: var(--text-primary);
 }
