--- a/app/(auth)/collections/[id]/components/PokemonsCardsSection/pokemonsCardsSection.module.scss
+++ b/app/(auth)/collections/[id]/components/PokemonsCardsSection/pokemonsCardsSection.module.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+  align-items: start;
   gap: 2.5vw;
   flex-wrap: wrap;
 }
